--- a/configs/config.js.dist
+++ b/configs/config.js.dist
@@ -1,7 +1,7 @@
 var config = {
-	port: 3000,
-	web_domain: "fbook.local",
-	api_base_url: "http://api.fbook.vn/api/v1/"
+    port: 5000,
+    web_domain: "book.framgia.vn",
+    api_base_url: "http://api-book.framgia.vn/api/v0/"
 };
 
 module.exports = config;
