--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.4.1",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
+    "express-validator": "^3.2.0",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
