--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-ejs-layouts": "^2.3.0",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
     "morgan": "~1.8.1",
