--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^2.4.1",
     "body-parser": "~1.17.1",
     "bower": "^1.8.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
