--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "cardslider": "^1.1.3",
     "modernizr": "2.8.3",
     "jquery-1.12.4.min": "https://code.jquery.com/jquery-1.12.4.min.js",
-    "jquery-validation": "^1.16.0"
+    "jquery-validation": "^1.16.0",
+    "bootstrap-star-rating": "^4.0.1"
   }
 }
