improve booking book

--- a/configs/config.js.dist
+++ b/configs/config.js.dist
@@ -13,6 +13,14 @@ var config = {
     },
     user: {
         category_name: 30
+    },
+    book_user: {
+        status: {
+            "waiting": 1,
+            "reading": 2,
+            "done": 3,
+            "cancel_waiting": 4
+        }
     }
 };
 
