--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "jquery-1.12.4.min": "https://code.jquery.com/jquery-1.12.4.min.js",
     "jquery-validation": "^1.16.0",
     "bootstrap-star-rating": "^4.0.1",
-    "remarkable-bootstrap-notify": "^3.1.3"
+    "remarkable-bootstrap-notify": "^3.1.3",
+    "bootstrap-datepicker": "^1.7.0"
   }
 }
