--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "jquery-validation": "^1.16.0",
     "bootstrap-star-rating": "^4.0.1",
     "remarkable-bootstrap-notify": "^3.1.3",
-    "bootstrap-datepicker": "^1.7.0"
+    "bootstrap-datepicker": "^1.7.0",
+    "jquery-form": "^4.2.1"
   }
 }
